--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <table border="0" align="center">
     <tr>
       <td width="700" align="center" valign="middle"><h3>CVPR 2018 Tutorial on</h3>
-      <span class="title">Interpretable Machine Learning for Computer Vision</span></td>
+      <span class="title">ICCV'19 Workshop on Cross-Modal Learning in Real World</span></td>
     </tr>
     <tr>
         <td colspan="3" align="center"><h3>Room #301 COEX Convention Center, Seoul, Korea<br>Saturday afternoon, November 2, 2019</h3></td>
@@ -32,7 +32,7 @@
     <div>
       <div class="instructor">
           <a href="https://www.cs.tau.ac.il/~wolf/" >
-        <div class="instructorphoto"><img src="figures/lior.png"></div>
+        <div class="instructorphoto"><img src="figures/lior.jpg"></div>
         <div>Lior Wolf<br>Tel Aviv University & Facebook AI Research</div>
         </a>
       </div>
@@ -46,7 +46,7 @@
 
       <div class="instructor">
         <a href="https://web.eecs.umich.edu/~honglak/">
-            <div class="instructorphoto"><img src="figures/chunhua.png"></div>
+            <div class="instructorphoto"><img src="figures/honglak.png"></div>
             <div>Honglak Lee (tentative)<br>Google Brain & University of Michigan, Ann Arbor</div>
         </a>
       </div>
