--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <div class="container">
   <table border="0" align="center">
     <tr>
-      <td width="700" align="center" valign="middle"><h3>CVPR 2018 Tutorial on</h3>
-      <span class="title">ICCV'19 Workshop on Cross-Modal Learning in Real World</span></td>
+      <td width="700" align="center" valign="middle"><h3>ICCV 2019 Workshop on </h3>
+      <span class="title">Cross-Modal Learning in Real World</span></td>
     </tr>
     <tr>
-        <td colspan="3" align="center"><h3>Room #301 COEX Convention Center, Seoul, Korea<br>Saturday afternoon, November 2, 2019</h3></td>
+        <td colspan="3" align="center"><h3>Room 301 COEX Convention Center, Seoul, Korea<br>Saturday afternoon, November 2, 2019</h3></td>
     </tr>
   </table>
   <p><img src="figures/main.png" width="1000" align="middle" /></p>
