--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="instructor">
           <a href="https://www.cs.tau.ac.il/~wolf/" >
         <div class="instructorphoto"><img src="figures/lior.jpg"></div>
-        <div>Lior Wolf<br>Tel Aviv University & Facebook AI Research</div>
+        <div>Lior Wolf<br>TAU & Facebook</div>
         </a>
       </div>
 
@@ -47,7 +47,7 @@
       <div class="instructor">
         <a href="https://web.eecs.umich.edu/~honglak/">
             <div class="instructorphoto"><img src="figures/honglak.png"></div>
-            <div>Honglak Lee (tentative)<br>Google Brain & University of Michigan, Ann Arbor</div>
+            <div>Honglak Lee (tentative)<br>Google & UMich</div>
         </a>
       </div>
 
