--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
 </br>
 
 <div class="container">
+  <h2>News !!!</h2>
+    <div>
+      <div class="instructor">
+          <a href="https://www.cs.tau.ac.il/~wolf/" >
+        <div class="instructorphoto"><img src="figures/lior.jpg"></div>
+        <div>Lior Wolf<br>TAU & Facebook</div>
+        </a>
+      </div>
+    
+    <div class="overview">
+    <p> The submission site of our workshop is avaiable now (<a href="https://cmt3.research.microsoft.com/CroMoL2019">link</a>). </p>
+    </div>
+
+      
+    </div>
+    <p></p> 
+</div>   
+
+</br>
+
+<div class="container">
   <h2>Speakers</h2>
     <div>
       <div class="instructor">
