--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 </br>
 
 <div class="container">
-  <h2>News !!!</h2>  
+  <h2><font color="#FF0000">News !!!</font> </h2>  
     <div class="overview">
-    <p> The submission site of our workshop is avaiable now (<a href="https://cmt3.research.microsoft.com/CroMoL2019">link</a>). </p>
+    <p> The submission site of our workshop is avaiable now (<a href="https://cmt3.research.microsoft.com/CroMoL2019">link</a>). The deadline is Aug. 1st (12:00 PM), 2019 </p>
     </div>
-    <p></p> 
 </div>   
 
 </br>
