--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="container">
   <h2><font color="#FF0000">News !!!</font> </h2>  
     <div class="overview">
-    <p> The submission site of our workshop is avaiable now (<a href="https://cmt3.research.microsoft.com/CroMoL2019">link</a>). The deadline is Aug. 1st (12:00 PM), 2019. </p>
+    <p> Submission: We invite authors to submit unpublished papers (8-page ICCV format) to this <a href="https://cmt3.research.microsoft.com/CroMoL2019">link</a>. All submissions will go through a double-blind review process. Accepted papers at ICCV 2019 are also welcome to be presented during our poster session to increase exposure and foster discussion in the community. The submission deadline is Aug. 1st (12:00 PM), 2019. </p>
     </div>   
 </div>   
 
