--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <td colspan="3" align="center"><h3>Room 301 COEX Convention Center, Seoul, Korea<br>Saturday afternoon, November 2, 2019</h3></td>
     </tr>
   </table>
-  <p><img src="figures/main.png" width="1000" align="middle" /></p>
+  <p><img src="figures/iccv2019.png" width="1000" align="middle" /></p>
 </div>
 
 </br>
