--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="instructor">
         <a href="http://www.ee.oulu.fi/~lili/LiLiuHomepage.html">
             <div class="instructorphoto"><img src="figures/Li Liu.jpg"></div>
-            <div>Li Liu<br>University of Oulu & NUDT</div>
+            <div>Li Liu<br>NUDT</div>
         </a>
       </div>
       
