--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <td width="300"><htable>Event</htable></td> <td width="300"><htable>Date</htable></td>
     </tr>
     <tr>
-      <td>Paper Submission Deadline</td><td><strong>July 30, 2019</strong></td>
+      <td>Paper Submission Deadline</td><td><strong>August 1, 2019</strong></td>
     </tr>
     <tr>
       <td>Notification of Acceptance</td><td><strong>August 25, 2019</strong></td>
@@ -53,9 +53,11 @@
       <td>Camera-ready due</td><td><strong>August 30, 2019</strong></td>
     </tr>
     <tr>
-      <td>Workshop (Full day)</td><td><strong>October 27, 2019</strong></td>
+      <td>Workshop (Half day, afternoon)</td><td><strong>November 2, 2019</strong></td>
     </tr>
   </tbody></table>
+      <p></p> 
+      <p></p> 
       
   
   </div>   
