--- a/index.html
+++ b/index.html
@@ -25,17 +25,46 @@
   <p><img src="figures/iccv2019.png" width="1000" align="middle" /></p>
 </div>
 
+  
 </br>
 
 <div class="container">
-  <h2><font color="#FF0000">Submission</font> </h2>  
+  <h2>Overview</h2>
+    <div class="overview">
+    <p>To understand the world around us more intelligently and better, it needs to be able to interpret multimodal signals together. This is because humans routinely perform complex vision tasks which involve interactions among different modalities. With the rapid growth of multimodal data (e.g., image, video, audio, depth, IR, text, sketch, synthetic, etc.), cross-modal learning, which aims to develop techniques that can process and relate information across different modalities, has drawn increasing attention recently. It is a vibrant multidisciplinary field of increasing importance and with extraordinary potential. It has been widely applied to many tasks such as cross-modal retrieval, phrase localization, visual dialogue, visual captioning, visual question answering, language-based person search/action detection/semantic segmentation, etc. </p>
+    <p>However, real world applications pose various challenges to cross modal learning, such as limited training data, multimodal content imbalance, large visual-semantic discrepancy, cross-dataset discrepancy, missing modalities, etc. To address these challenges, quite a lot of attempts motivated from various perspectives (including visual attributes, data generation, meta-learning, etc.) have been made and appeared in top conferences (including CVPR, ICCV, ECCV, NIPS and ICLR) and top journals (including TPAMI and IJCV). However, those mentioned challenges are far from being solved. The goal of this workshop is to encourage researchers to present high quality work and to facilitate effective discussions on the potential solutions to those challenges.</p>
+    </div>
+</div>
+  
+</br>
+
+<div class="container">
+  <h2>Topics</h2>
+    <div class="topic">
+    <p>We encourage researchers to study and develop new cross-modal learning methods that can address various practical challenges, and yet exhibit good discriminability and robustness in real applications. We are soliciting original contributions including, but not limited to: </p>
+    <p> 1) Discriminative cross-modal representations, e.g., hybrid feature representations, modality fusion, modality completion, and adversarial sample generation.</p>
+    <p> 2) New cross-modal learning methods, e.g., accelerated/minibatch CCA, VSE with negative sample mining, adversarial cross-modal learning.</p>
+    <p> 3) Zero/few-shot cross-modal learning, e.g., zero/few-shot cross-modal retrieval/localization.</p>
+    <p> 4) Cross-modal alignment, e.g., referring expression.</p>
+    <p> 5) Cross-dataset adaptation in cross-modal learning, e.g., cross-dataset generalization.</p>
+    <p> 6) Binary cross-modal learning, e.g., binary cross-modal retrieval.</p>
+    <p> 7) Ensemble cross-modal learning, e.g., adaptive similarity fusion.</p>
+    <p> 8) Unsupervised/semi-supervised cross-modal learning.</p>
+    <p> 9) New applications of existing cross-modal learning methods.</p>
+  </div>
+</div>
+
+</br>
+
+<div class="container">
+  <h2> Paper Submission </h2>  
     <div class="overview">
     <p> All submissions will be handled electronically via the workshop’s CMT Website. Click the following link to go to the submission site: <a href="https://cmt3.research.microsoft.com/CroMoL2019">https://cmt3.research.microsoft.com/CroMoL2019</a>.  </p>
     <p> The authors will submit full length papers (ICCV format) online, including:</p>
-    <p> (1) Title of paper and short abstract summarizing the main contribution,</p>
-    <p> (2) Names and contact info of all authors, also specifying the contact author,</p>
-    <p> (3) Contributions must be written and presented in English, </p>
-    <p> (4) The paper in PDF format.</p>
+    <p> 1) Title of paper and short abstract summarizing the main contribution,</p>
+    <p> 2) Names and contact info of all authors, also specifying the contact author,</p>
+    <p> 3) Contributions must be written and presented in English, </p>
+    <p> 4) The paper in PDF format.</p>
     <p> All submissions will be peer-reviewed by at least 3 members of the program committee.</p>
     
       
@@ -94,15 +123,6 @@
     <p></p> 
 </div>   
 
-</br>
-
-<div class="container">
-  <h2>Overview</h2>
-    <div class="overview">
-    <p>To understand the world around us more intelligently and better, it needs to be able to interpret multimodal signals together. This is because humans routinely perform complex vision tasks which involve interactions among different modalities. With the rapid growth of multimodal data (e.g., image, video, audio, depth, IR, text, sketch, synthetic, etc.), cross-modal learning, which aims to develop techniques that can process and relate information across different modalities, has drawn increasing attention recently. It is a vibrant multidisciplinary field of increasing importance and with extraordinary potential. It has been widely applied to many tasks such as cross-modal retrieval, phrase localization, visual dialogue, visual captioning, visual question answering, language-based person search/action detection/semantic segmentation, etc. </p>
-    <p>However, real world applications pose various challenges to cross modal learning, such as limited training data, multimodal content imbalance, large visual-semantic discrepancy, cross-dataset discrepancy, missing modalities, etc. To address these challenges, quite a lot of attempts motivated from various perspectives (including visual attributes, data generation, meta-learning, etc.) have been made and appeared in top conferences (including CVPR, ICCV, ECCV, NIPS and ICLR) and top journals (including TPAMI and IJCV). However, those mentioned challenges are far from being solved. The goal of this workshop is to encourage researchers to present high quality work and to facilitate effective discussions on the potential solutions to those challenges.</p>
-    </div>
-</div>
 
 </br>
 
