--- a/index.html
+++ b/index.html
@@ -29,20 +29,18 @@
 </br>
 
 <div class="container">
-  ::before
   <h2>Overview</h2>
     <div class="overview">
     <p>To understand the world around us more intelligently and better, it needs to be able to interpret multimodal signals together. This is because humans routinely perform complex vision tasks which involve interactions among different modalities. With the rapid growth of multimodal data (e.g., image, video, audio, depth, IR, text, sketch, synthetic, etc.), cross-modal learning, which aims to develop techniques that can process and relate information across different modalities, has drawn increasing attention recently. It is a vibrant multidisciplinary field of increasing importance and with extraordinary potential. It has been widely applied to many tasks such as cross-modal retrieval, phrase localization, visual dialogue, visual captioning, visual question answering, language-based person search/action detection/semantic segmentation, etc. </p>
     <p>However, real world applications pose various challenges to cross modal learning, such as limited training data, multimodal content imbalance, large visual-semantic discrepancy, cross-dataset discrepancy, missing modalities, etc. To address these challenges, quite a lot of attempts motivated from various perspectives (including visual attributes, data generation, meta-learning, etc.) have been made and appeared in top conferences (including CVPR, ICCV, ECCV, NIPS and ICLR) and top journals (including TPAMI and IJCV). However, those mentioned challenges are far from being solved. The goal of this workshop is to encourage researchers to present high quality work and to facilitate effective discussions on the potential solutions to those challenges.</p>
     </div>
-  ::after
 </div>
   
 </br>
 
 <div class="container">
   <h2>Topics</h2>
-    <div class="topic">
+    <div class="overview">
     <p> We encourage researchers to study and develop new cross-modal learning methods that can address various practical challenges, and yet exhibit good discriminability and robustness in real applications. We are soliciting original contributions including, but not limited to: </p>
     <p> 1) Discriminative cross-modal representations, e.g., hybrid feature representations, modality fusion, modality completion, and adversarial sample generation.</p>
     <p> 2) New cross-modal learning methods, e.g., accelerated/minibatch CCA, VSE with negative sample mining, adversarial cross-modal learning.</p>
