--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <h2>Topics</h2>
     <div class="overview">
     <p> We encourage researchers to study and develop new cross-modal learning methods that can address various practical challenges, and yet exhibit good discriminability and robustness in real applications. We are soliciting original contributions including, but not limited to: </p>
-    <p> 1) Discriminative cross-modal representations, e.g., hybrid feature representations, modality fusion, modality completion, and adversarial sample generation.</p>
-    <p> 2) New cross-modal learning methods, e.g., accelerated/minibatch CCA, VSE with negative sample mining, adversarial cross-modal learning.</p>
+    <p> 1) Discriminative cross-modal representations, e.g., hybrid feature representations and adversarial sample generation.</p>
+    <p> 2) New cross-modal learning methods, e.g., negative sample mining and adversarial cross-modal learning.</p>
     <p> 3) Zero/few-shot cross-modal learning, e.g., zero/few-shot cross-modal retrieval/localization.</p>
     <p> 4) Cross-modal alignment, e.g., referring expression.</p>
     <p> 5) Cross-dataset adaptation in cross-modal learning, e.g., cross-dataset generalization.</p>
