--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <div class="instructor">
         <a href="https://scholar.google.com/citations?user=bjEpXBoAAAAJ&hl=zh-CN">
             <div class="instructorphoto"><img src="figures/Matti.jpg"></div>
-            <div>Matti Pietikainen<br>University of Oulu</div>
+            <div>Matti Pietikäinen<br>University of Oulu</div>
         </a>
       </div>
       
