--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
   <h2>Topics</h2>
     <div class="overview">
     <p> We encourage researchers to study and develop new cross-modal learning methods that can address various practical challenges, and yet exhibit good discriminability and robustness in real applications. We are soliciting original contributions including, but not limited to: </p>
-    <p> 1) Discriminative cross-modal representations, e.g., hybrid feature representations and adversarial sample generation.</p>
-    <p> 2) New cross-modal learning methods, e.g., negative sample mining and adversarial cross-modal learning.</p>
+    <p> 1) Cross-modal representation, e.g., hybrid feature representations and adversarial sample generation.</p>
+    <p> 2) Cross-modal generation, e.g., visual captioning, text-based image/video generation and visual question answering.</p>
     <p> 3) Zero/few-shot cross-modal learning, e.g., zero/few-shot cross-modal retrieval/localization.</p>
-    <p> 4) Cross-modal alignment, e.g., referring expression.</p>
-    <p> 5) Cross-dataset adaptation in cross-modal learning, e.g., cross-dataset generalization.</p>
-    <p> 6) Binary cross-modal learning, e.g., binary cross-modal retrieval.</p>
-    <p> 7) Ensemble cross-modal learning, e.g., adaptive similarity fusion.</p>
+    <p> 4) Cross-modal alignment, e.g., referring expression, dense cross-modal retrieval and phrase localization.</p>
+    <p> 5) Cross-modal fusion, e.g., audio-visual speech recognition and text-based image classification.</p>
+    <p> 6) Cross-dataset adaptation in cross-modal learning, e.g., cross-dataset generalization.</p>
+    <p> 7) Binary cross-modal learning, e.g., binary cross-modal retrieval.</p>
     <p> 8) Unsupervised/semi-supervised cross-modal learning.</p>
     <p> 9) New applications of existing cross-modal learning methods.</p>
+    
+
   </div>
 </div>
 
