--- a/index.html
+++ b/index.html
@@ -150,28 +150,28 @@
       <div class="instructor">
           <a href="https://yanrockhuang.github.io/" >
         <div class="instructorphoto"><img src="figures/Yan Huang.jpg"></div>
-        <div>Yan Huang<br>CASIA</div>
+        <div>Yan Huang<br>CASIA<br></div>
         </a>
       </div>
 
       <div class="instructor">
         <a href="https://www.amir-zadeh.com/">
             <div class="instructorphoto"><img src="figures/Amir Zadeh.jpg"></div>
-            <div>Amir Zadeh<br>CMU</div>
+            <div>Amir Zadeh<br>CMU<br></div>
         </a>
       </div>
 
       <div class="instructor">
         <a href="http://www.qi-wu.me/">
             <div class="instructorphoto"><img src="figures/Qi Wu.jpg"></div>
-            <div>Qi Wu<br>University of Adelaide</div>
+            <div>Qi Wu<br>University of Adelaide<br></div>
         </a>
       </div>
 
       <div class="instructor">
         <a href="http://www.ee.oulu.fi/~lili/LiLiuHomepage.html">
             <div class="instructorphoto"><img src="figures/Li Liu.jpg"></div>
-            <div>Li Liu<br>NUDT<br>University of Oulu</div>
+            <div>Li Liu<br>National University of Defense Technology<br>University of Oulu</div>
         </a>
       </div>
       
