--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
       <div class="instructor">
           <a href="https://yanrockhuang.github.io/" >
         <div class="instructorphoto"><img src="figures/Yan Huang.jpg"></div>
-        <div>Yan Huang<br>CASIA<br></div>
+        <div>Yan Huang<br>Institute of Automation, <br>Chinese Academy of Sciences</div>
         </a>
       </div>
 
       <div class="instructor">
         <a href="https://www.amir-zadeh.com/">
             <div class="instructorphoto"><img src="figures/Amir Zadeh.jpg"></div>
-            <div>Amir Zadeh<br>CMU<br></div>
+            <div>Amir Zadeh<br>Carnegie Mellon University<br></div>
         </a>
       </div>
 
@@ -180,14 +180,14 @@
       <div class="instructor">
         <a href="https://www.cs.cmu.edu/~morency/">
             <div class="instructorphoto"><img src="figures/Louis-Philippe Morency.jpg"></div>
-            <div>Louis-Philippe Morency<br>CMU</div>
+            <div>Louis-Philippe Morency<br>Carnegie Mellon University</div>
         </a>
       </div>
       
       <div class="instructor">
         <a href="http://www.cbsr.ia.ac.cn/users/liangwang/">
             <div class="instructorphoto"><img src="figures/Liang Wang.jpg"></div>
-            <div>Liang Wang<br>CASIA</div>
+            <div>Liang Wang<br>Institute of Automation, <br>Chinese Academy of Sciences</div>
         </a>
       </div>
       
