--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="instructorphoto"><img src="figures/Li Liu.jpg"></div>
             <div>Li Liu</div>
         </a>
-        <div>NUDT,University of Oulu</div>
+        <div>NUDT & University of Oulu</div>
       </div>
       
       
