--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <div>Yan Huang</div>
         </a>
         <div>CASIA</div>
+        <div></div>
       </div>
 
       <div class="instructor">
