--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p> 2) Names and contact info of all authors, also specifying the contact author,</p>
     <p> 3) Contributions must be written and presented in English, </p>
     <p> 4) The paper in PDF format.</p>
-    <p> All submissions will be peer-reviewed by at least 3 members of the program committee.</p>
+    <p> All submissions will be <strong>double-blind</strong> peer-reviewed by at least 3 members of the program committee.</p>
     
       
     <table border="2" align="center">
