--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="instructor">
         <a href="https://web.eecs.umich.edu/~honglak/">
             <div class="instructorphoto"><img src="figures/honglak.png"></div>
-            <div>Honglak Lee (tentative)<br>Google & UMich</div>
+            <div>Honglak Lee<br>Google & UMich</div>
         </a>
       </div>
 
