--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       </div>
 
       <div class="instructor">
-        <a href="https://cs.adelaide.edu.au/~chhshen/">
-            <div class="instructorphoto"><img src="figures/chunhua.jpg"></div>
-            <div>Chunhua Shen<br>University of Adelaide</div>
+        <a href="https://cv.snu.ac.kr/index.php/~bhhan/">
+            <div class="instructorphoto"><img src="figures/bohyung_han.jpg"></div>
+            <div>Bohyung Han<br>Seoul National University</div>
         </a>
       </div>
 
