--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
       <p><span class="announce_date">13:10 - 13:50 </span>.  Oral Session (2 presentations: 20min each) </p>
       <p><span class="announce_date">13:55 - 14:35 </span>.  Invited Talk (Talk 1) </p>
       <p><span class="announce_date">14:40 - 15:20 </span>.  Invited Talk (Talk 2) </p>
-      <p><span class="announce_date">15:25 - 16:05 </span>.  Invited Talk (Talk 3) </p>
-      <p><span class="announce_date">16:10 - 17:00 </span>.  Poster Session (12 posters) </p>
-      <p><span class="announce_date">17:00 - 17:05 </span>.  Closing Remarks </p>
+      <p><span class="announce_date">15:25 - 16:25 </span>.  Poster Session </p>
+      <p><span class="announce_date">16:30 - 17:10 </span>.  Invited Talk (Talk 3) </p>
+      <p><span class="announce_date">17:10 - 17:15 </span>.  Closing Remarks </p>
     </div>
 </div>
 
