--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <span class="title">Cross-Modal Learning in Real World</span></td>
     </tr>
     <tr>
-        <td colspan="3" align="center"><h3>Room 307A COEX Convention Center, Seoul, Korea<br>Saturday afternoon, November 2, 2019</h3></td>
+        <td colspan="3" align="center"><h3>Room 307A COEX Convention Center, Seoul, Korea<br>Saturday afternoon, November 2, PM
+(13:00-17:30), 2019</h3></td>
     </tr>
   </table>
   <p><img src="figures/iccv2019.png" width="1000" align="middle" /></p>
